samples/_failures_safe/1761665209_78603e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3eb05177.c: In function ‘main’:
./samples/SAFE/__tmp_3eb05177.c:150:34: error: missing terminating " character
  150 |     printf("%-20s %s\n", "----", "
      |                                  ^
./samples/SAFE/__tmp_3eb05177.c:150:5: error: expected expression at end of input
  150 |     printf("%-20s %s\n", "----", "
      |     ^~~~~~
./samples/SAFE/__tmp_3eb05177.c:150:5: error: expected declaration or statement at end of input
